--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.2",
+    "googleapis": "^27.0.0",
     "helmet": "^3.9.0",
+    "loadenv": "^2.2.0",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "prettier": "^1.11.0",
@@ -21,17 +23,13 @@
     "winston-color": "^1.0.0"
   },
   "scripts": {
-    "lint":
-      "./node_modules/eslint/bin/eslint.js ./server --fix && cd client && yarn lint && cd ..",
-    "build":
-      "yarn install && cd client && yarn run build && cd .. && yarn lint",
+    "lint": "./node_modules/eslint/bin/eslint.js ./server --fix && cd client && yarn lint && cd ..",
+    "build": "yarn install && cd client && yarn run build && cd .. && yarn lint",
     "prestart": "yarn run build",
     "start": "sh scripts/start.sh",
     "stop": "bash scripts/stop.sh",
-    "build:reload":
-      "yarn install && cd client && yarn run build && yarn run build:watch",
+    "build:reload": "yarn install && cd client && yarn run build && yarn run build:watch",
     "start-server:reload": "nodemon --watch server server/index.js",
-    "start:reload":
-      "concurrently \"yarn run build:reload\" \"nodemon --watch client/dist --watch server server/index.js --local\""
+    "start:reload": "concurrently \"yarn run build:reload\" \"nodemon --watch client/dist --watch server server/index.js --local\""
   }
 }
