--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "prettier": "^1.11.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "winston": "^2.4.0",
