--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "dotenv": "^5.0.1",
     "eslint": "^4.13.1",
     "eslint-config-node": "^2.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -17,8 +18,10 @@
     "prettier": "^1.11.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "web3": "^1.0.0-beta.33",
     "winston": "^2.4.0",
-    "winston-color": "^1.0.0"
+    "winston-color": "^1.0.0",
+    "yargs": "^11.0.0"
   },
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js ./server --fix && cd client && yarn lint && cd ..",
