--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.16.2",
     "googleapis": "^27.0.0",
     "helmet": "^3.9.0",
-    "loadenv": "^2.2.0",
+    "joi": "^13.1.2",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "prettier": "^1.11.0",
