--- a/verification-plugins/chrome/yt-lizzenz0r/manifest.json
+++ b/verification-plugins/chrome/yt-lizzenz0r/manifest.json
@@ -22,5 +22,6 @@
       "48": "images/get_started48.png",
       "128": "images/get_started128.png"
     },
+  "content_security_policy": "script-src 'self' https://wallet.metamask.io/metamascara.js; object-src 'self'",
   "manifest_version": 2
 }
